--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to Github</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore temporibus voluptate quaerat. Illo vero possimus voluptate voluptatibus quisquam animi, porro totam eos velit nihil molestiae cumque nisi suscipit perspiciatis fugit molestias ut dolorum maiores in nam? Voluptatibus vel veritatis ipsum voluptates, deleniti quas est, cum minus ut labore possimus non.</p>
+    <img src="pexels-photo-847393.jpeg" alt="">
 </body>
 </html>
