--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore temporibus voluptate quaerat. Illo vero possimus voluptate voluptatibus quisquam animi, porro totam eos velit nihil molestiae cumque nisi suscipit perspiciatis fugit molestias ut dolorum maiores in nam? Voluptatibus vel veritatis ipsum voluptates, deleniti quas est, cum minus ut labore possimus non.</p>
     <img src="pexels-photo-847393.jpeg" alt="">
     <p>I love codding</p>
+    <div>
+        <h3>
+           My new blog 
+        </h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum sed earum facere aspernatur harum reiciendis tenetur dolore minus illum debitis omnis error quod enim, necessitatibus ducimus, ut id iure maxime voluptates eligendi totam sit placeat iste ullam! Officiis, architecto eum.</p>
+    </div>
 </body>
 </html>
